Version: 1.0.9
Date: ????
  Info:
    - Attach the frame nicely to the bottom
    - Code cleanup
    - Use the mod name as a prefix and replace some quotes
    - Change I to [i] in the description
    - Fix crash when editing a removed output
    - Add a button to showcase the currently selected option
    - Make the button look a tad better without looking out of place
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2024. 11. 15
  Info:
    - Suggest the presence of newsletter-for-mods-made-by-quezler
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2024. 11. 14
  Info:
    - Require the presence of newsletter-for-mods-made-by-quezler
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2024. 10. 30
  Info:
    - Add missing selection tool name check in event
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2024. 10. 30
  Info:
    - Add `/decider-combinator-output-constant-detector` command for justarandomgeek
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2024. 10. 21
  Info:
    - Fix locale entry
    - Fix `attempt to index local 'output' (a nil value)`
    - Fix `bad argument #1 of 2 to 'ipairs' (table expected, got nil)`
    - Note instead of crash when latency tries to update removed combinator
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2024. 10. 21
  Info:
    - Fixed "already present in the parent element" caused by mod rename
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2024. 10. 14
  Info: