@@ -9,6 +9,7 @@ Date: ????
     - Fix crash when editing a removed output
     - Add a button to showcase the currently selected option
     - Make the button look a tad better without looking out of place
+    - It just looks best without the button
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.8
 Date: 2024. 11. 15
